# laser-embed

./: .gitignore  CMakeLists.txt  CMakePresets.json  CppProperties.json  README.md  Template.uvprojx  convert.sh
APP/adc/: adc.c
APP/adc_temp/: adc_temp.c
APP/can/: can.c  can.h
APP/dac/: dac.c  dac.h
APP/dma/: dma.c  dma.h
APP/ds18b20/: ds18b20.c  ds18b20.h
APP/exti/: exti.c
APP/function/: function.c  function.h
APP/gps/: gps.c  gps.h
APP/hwjs/: hwjs.c  hwjs.h
APP/iic/: iic.c  iic.h
APP/input/: input.c  input.h
APP/iwdg/: iwdg.c
APP/key/: key.c  key.h
APP/led/: led.h
APP/module/: module.c  module.h
APP/nrf24l01/: nrf24l01.c  nrf24l01.h
APP/pwm/: pwm.c
APP/pwm_dac/: pwm_dac.c
APP/rtc/: rtc.c  rtc.h
APP/smg/: smg.c  smg.h
APP/spi/: spi.c  spi.h
APP/tftlcd/: font.h  tftlcd.c  tftlcd.h
APP/time/: time.c
APP/touch_key/: touch_key.c  touch_key.h
APP/voice/: voice.c  voice.h
APP/wkup/: wkup.c
Libraries/CMSIS/: core_cm3.c
Public/: usart.c  usart.h
User/: main.c  stm32f10x_conf.h
